--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(DS)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Array.h)
+set(SOURCE_FILES main.cpp Array.h Array.cpp)
 add_executable(DS ${SOURCE_FILES})
